--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+# Hide key from version control
+api_key.dart
+
+
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
